--- a/scratchstyles.css
+++ b/scratchstyles.css
@@ -72,7 +72,7 @@ a:visited{
 .shift3{
     position:relative;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    color: grey;
+    color: rgba(255, 255, 255, 0.723);
     font-size: 9px;
     text-align: left;
     bottom: 20px;
