--- a/scratchstyles.css
+++ b/scratchstyles.css
@@ -41,7 +41,7 @@ a{
     color: aliceblue;
 }
 a:visited{
-    color: rgb(28,28,28);
+    color: rgb(251, 164, 164);
 }
 .shift{
     position: relative;
